@@ -150,7 +150,7 @@ CHECK_CXX_FUNCTION_EXISTS ( std::isnan HAVE_STD_ISNAN )
 set (PACKAGE "itpp")
 set (PACKAGE_BUGREPORT "http://sourceforge.net/projects/itpp/forums/forum/115656")
 set (PACKAGE_NAME "IT++")
-set (PACKAGE_VERSION "4.3.rxxxx")
+set (PACKAGE_VERSION "4.3")
 set (PACKAGE_STRING "${PACKAGE_NAME} ${PACKAGE_VERSION}")
 set (PACKAGE_TARNAME ${PACKAGE})
 set (PACKAGE_URL "")
